# my_agent

./: .env.example  .gitignore  langgraph.json  pyproject.toml  requirements.txt
my_agent/: agent.py  config.yaml  demo.py  travel_agent.py
my_agent/utils/: __init__.py  clean_txt.py  config.py
my_agent/utils/logs/: __init__.py  logger.py
my_agent/utils/middleware/: __init__.py  read_store.py  save_store.py
my_agent/utils/models/: __init__.py  select_model.py
my_agent/utils/rag/: __init__.py  config.yaml  data_preparation.py  index_instruction.py  setup_rag.py
my_agent/utils/states/: __init__.py  travel_state.py
my_agent/utils/structured_output/: __init__.py
my_agent/utils/tool_agents/: car_agent.py  flight_agent.py  hotel_agent.py  trip_agent.py
my_agent/utils/tools/: __init__.py  manage_sql.py  send_email.py  web_search.py
